--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 # sonar-project.properties
 sonar.projectKey=ChayanidTermph_RefactoringLabWithSonar
 sonar.organization=chayanid-termphaiboon
+sonar.sources=Refactoring-Lab-master/src
 sonar.language=java
 sonar.java.binaries=.
 sonar.exclusions=**/*.java
